--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "dependencies": {
     "express": "3.4.x",
     "mysql": "2.0.x",
-    "request": "2.27.x",
     "sequelize": "2.0.x"
   },
   "devDependencies": {
     "mocha": "*",
     "should": "*",
-    "supertest": "*"
+    "supertest": "*",
+    "request": "2.27.x"
   },
   "engines": {
     "node": ">=0.10.0",
