--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "express": "3.4.x",
     "mysql": "2.0.x",
-    "sequelize": "2.0.x"
+    "sequelize": "2.0.x",
+    "bcrypt": "0.7.x"
   },
   "devDependencies": {
     "mocha": "*",
