패스워드 암호화 bcrypt 모듈에서 crypto 모듈로 변경

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "dependencies": {
     "express": "3.4.x",
     "mysql": "2.0.x",
-    "sequelize": "2.0.x",
-    "bcrypt": "0.7.x"
+    "sequelize": "2.0.x"
   },
   "devDependencies": {
     "mocha": "*",
