validator 모듈 추가, README 수정

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "3.4.x",
     "mysql": "2.0.x",
     "sequelize": "2.0.x",
-    "jade": "0.35.x"
+    "jade": "0.35.x",
+    "validator": "3.3.x"
   },
   "devDependencies": {
     "mocha": "*",
